# CardGenerator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  card_generator.py  img2img Backup.py  img2img.py  inventory.py  item_dict_gen.py  main.py  models  prompts.py  pyproject.toml  render_card_text.py  requirements.txt  template_builder.py  user_input.py  utilities.py
.git.bfg-report/2024-04-26/20-35-39/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-04-26/21-17-53/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-04-26/21-17-53/protected-dirt/: 24791408-HEAD.csv
MerchanBot CLI/: README.md  img2img.py  main.py  render_card_text.py  user_input.py
fonts/balgruf-font/: info.txt
models/stable-diffusion/Loras/: EnvyMimicXL01.safetensors  add-detail-xl.safetensors
