[tool.poetry]
name = "cardgenerator"
version = "0.1.0"
description = ""
authors = ["Alan Meigs <alan.meigs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.55.3"
fal-client = "^0.5.6"
gradio = "^5.7.1"
github = "^1.2.7"
pygithub = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
